--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <style name="Theme.App.Starting" parent="@style/Theme.NoteMark">
-        <item name="windowSplashScreenBackground">#5977F7</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/logo</item>
-        <item name="postSplashScreenTheme">@style/Theme.NoteMark</item>
-    </style>
+
+<style name="Theme.Splash" parent="@style/Theme.NoteMark">
+    <item name="windowSplashScreenBackground">#5977F7</item>
+    <item name="windowSplashScreenAnimatedIcon">@drawable/logo_white</item>
+    <item name="postSplashScreenTheme">@style/Theme.NoteMark</item>
+</style>
+
 </resources>
