--- a/app/src/main/res/values-v31/splash.xml
+++ b/app/src/main/res/values-v31/splash.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="Theme.Splash" parent="@style/Theme.NoteMark">
-        <item name="android:windowSplashScreenBackground">#5977F7</item>
+        <item name="android:windowSplashScreenBackground">@color/splash_screen</item>
         <item name="android:windowSplashScreenAnimatedIcon">@drawable/logo_white</item>
         <item name="postSplashScreenTheme">@style/Theme.NoteMark</item>
     </style>
