--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -3,7 +3,7 @@
 <resources>
 
 <style name="Theme.Splash" parent="@style/Theme.NoteMark">
-    <item name="windowSplashScreenBackground">#5977F7</item>
+    <item name="windowSplashScreenBackground">@color/splash_screen</item>
     <item name="windowSplashScreenAnimatedIcon">@drawable/logo_white</item>
     <item name="postSplashScreenTheme">@style/Theme.NoteMark</item>
 </style>
